[gd_scene load_steps=8 format=2]

[ext_resource path="res://Scripts/GameOver.gd" type="Script" id=1]
[ext_resource path="res://Assets/Fonts/Contra.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://Assets/Images/Menu/MenuSelectThingy.png" type="Texture" id=3]
[ext_resource path="res://Assets/Images/Prototypes/GameOverScreen.png" type="Texture" id=4]
[ext_resource path="res://Assets/Sounds/Game_over.ogg" type="AudioStream" id=5]

[sub_resource type="Theme" id=1]

[sub_resource type="DynamicFont" id=2]
size = 32
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 2 )

[node name="GameOver" type="Node2D"]
script = ExtResource( 1 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_left = -516.0
margin_top = -490.0
margin_right = 516.0
margin_bottom = 486.0
color = Color( 0, 0, 0, 1 )

[node name="Sprite" type="Sprite" parent="."]
visible = false
texture = ExtResource( 4 )

[node name="FinalScreen" type="Node2D" parent="."]
position = Vector2( 198, 4 )

[node name="Continue" type="Label" parent="FinalScreen"]
margin_left = -328.0
margin_top = 155.0
margin_right = -80.0
margin_bottom = 190.0
theme = SubResource( 1 )
custom_colors/font_color = Color( 0.647059, 0.647059, 0.647059, 1 )
custom_fonts/font = SubResource( 2 )
text = "cONTINUE"

[node name="End" type="Label" parent="FinalScreen"]
margin_left = -327.0
margin_top = 220.0
margin_right = -214.0
margin_bottom = 256.0
theme = SubResource( 1 )
custom_colors/font_color = Color( 0.647059, 0.647059, 0.647059, 1 )
custom_fonts/font = SubResource( 2 )
text = "eND"

[node name="SelectUp" type="Sprite" parent="FinalScreen"]
position = Vector2( -384, 174 )
scale = Vector2( 4.41943, 4.15733 )
texture = ExtResource( 3 )

[node name="SelectDown" type="Sprite" parent="FinalScreen"]
position = Vector2( -384, 237 )
scale = Vector2( 4.41943, 4.15733 )
texture = ExtResource( 3 )

[node name="GameOver" type="Label" parent="FinalScreen"]
margin_left = -390.0
margin_top = 57.0
margin_right = -102.0
margin_bottom = 93.0
theme = SubResource( 1 )
custom_colors/font_color = Color( 0.647059, 0.647059, 0.647059, 1 )
custom_fonts/font = SubResource( 2 )
text = "game over"

[node name="Player1" type="Label" parent="FinalScreen"]
margin_left = -653.0
margin_top = -365.0
margin_right = -576.0
margin_bottom = -329.0
theme = SubResource( 1 )
custom_colors/font_color = Color( 0.647059, 0.647059, 0.647059, 1 )
custom_fonts/font = SubResource( 2 )
text = "1P"

[node name="Player2" type="Label" parent="FinalScreen"]
visible = false
margin_left = -132.0
margin_top = -365.0
margin_right = -55.0
margin_bottom = -329.0
theme = SubResource( 1 )
custom_colors/font_color = Color( 0.647059, 0.647059, 0.647059, 1 )
custom_fonts/font = SubResource( 2 )
text = "2P"

[node name="HI" type="Label" parent="FinalScreen"]
margin_left = -392.0
margin_top = -203.0
margin_right = -326.0
margin_bottom = -167.0
theme = SubResource( 1 )
custom_colors/font_color = Color( 0.647059, 0.647059, 0.647059, 1 )
custom_fonts/font = SubResource( 2 )
text = "Hi"

[node name="Flash" type="Node2D" parent="FinalScreen"]

[node name="ScoreP1" type="Label" parent="FinalScreen/Flash"]
margin_left = -360.0
margin_top = -365.0
margin_right = -326.0
margin_bottom = -329.0
theme = SubResource( 1 )
custom_colors/font_color = Color( 0.647059, 0.647059, 0.647059, 1 )
custom_fonts/font = SubResource( 2 )
text = "0"

[node name="ScoreP2" type="Label" parent="FinalScreen/Flash"]
visible = false
margin_left = 161.0
margin_top = -366.0
margin_right = 205.0
margin_bottom = -330.0
theme = SubResource( 1 )
custom_colors/font_color = Color( 0.647059, 0.647059, 0.647059, 1 )
custom_fonts/font = SubResource( 2 )
text = "0"

[node name="MaxScore" type="Label" parent="FinalScreen/Flash"]
margin_left = -231.0
margin_top = -203.0
margin_right = -63.0
margin_bottom = -167.0
theme = SubResource( 1 )
custom_colors/font_color = Color( 0.647059, 0.647059, 0.647059, 1 )
custom_fonts/font = SubResource( 2 )
text = "35000"

[node name="Camera2D" type="Camera2D" parent="."]
current = true
zoom = Vector2( 1.01, 1.53 )
drag_margin_h_enabled = true

[node name="Game_over" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )
volume_db = -11.154
